@@ -1,3 +1,6 @@
+2010-04-09  Jerome Fereyre  <jerome.fereyre@bull.net>
+	* Add fsck command (ticket #34).
+
 2010-04-07  Aurelien Degremont  <aurelien.degremont@cea.fr>
 	* Add router management (ticket #15).
 
